# AI

rescue-mission-ai-thesis-master@a8e3a878820_2/: .gitignore  CMakeLists.txt  package.xml  setup.py
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/: .gitignore  .ignore  Blocks.code-workspace  Blocks.uproject
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/Config/: DefaultEngine.ini
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/Content/Flying/: Person.uasset  Spawner.uasset  snowman.uasset  tree.uasset  waypoint.uasset
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/Content/FlyingCPP/Maps/: pillarmap.umap
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/Source/Blocks/: TextReaderComponent.cpp  TextReaderComponent.h
rescue-mission-ai-thesis-master@a8e3a878820_2/CustomBlocks/Source/Data/: people_clustered.txt  people_houses.txt  people_scattered.txt  trees.txt  waypoints.txt
rescue-mission-ai-thesis-master@a8e3a878820_2/data/: evenly_spaced_waypoints.txt  optimized_area_coverage.txt  people_clustered.txt  people_clustered.yaml  people_houses.yaml  people_in_houses.txt  people_list_old.yaml  people_scattered.txt  people_scattered.yaml  tasks.yaml  tasks_old.yaml  tree_spawns.txt  waypoints_full.yaml  waypoints_full_old.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/data/exp3/: waypoints_exp3.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/data/exp5/: people_exp5_one_spiral.yaml  people_exp5_two_spiral.yaml  waypoints_exp5_one_spiral.yaml  waypoints_exp5_two_spiral_1.yaml  waypoints_exp5_two_spiral_2.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/data/exp6/: people_list.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/data/exp7/: people_list.yaml  tasks.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/data/exp8/: people_list.yaml
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/: all_levels.launch  four_drone.launch  one_drone.launch  one_drone_runaway.launch  rqt.launch  runaway_level.launch  six_drone.launch  two_drone.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/1/: exp1.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/2/: exp2.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/3/: exp3.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/4/: exp4.launch  exp4_six.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/5/: exp5_formation_one_spiral.launch  exp5_one_spiral.launch  exp5_two_spiral.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/6/: exp6.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/7/: exp7.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/launch/experiments/8/: exp8.launch  levels.launch
rescue-mission-ai-thesis-master@a8e3a878820_2/msg/: DroneInfo.msg  DroneInfoArray.msg  People.msg  PersonIdAndPosition.msg  Task.msg  TaskArray.msg  TaskBid.msg
rescue-mission-ai-thesis-master@a8e3a878820_2/rqt/: Default.perspective
rescue-mission-ai-thesis-master@a8e3a878820_2/rviz/: default.rviz
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/: avoid.py  explore.py  fake_drone.py  feelforce.py  find_person.py  first_aid.py  formation.py  helper_functions.py  inhibitor.py  motor.py  multiple_people.py  navigation.py  neighbour_listener.py  recharge.py  runaway.py  spiral.py  suppressor.py  task_allocation.py  task_manager.py  wander.py
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/support_scripts/: area_coverage.ipynb  bag_force_result.ipynb  bag_result_creator.ipynb  bag_result_creator_multiple.ipynb  figures.py  generate_evenly_spaced_waypoints.py  generate_people_clustered.py  generate_people_houses.py  generate_people_scattered.py  generate_trees.py
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/support_scripts/darp/: test.py
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/support_scripts/darp/CoveragePathPlanning/: DARPWithCPPAlgos.ipynb  setup.py
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/support_scripts/darp/CoveragePathPlanning/cpp_algorithms/: common_helpers.py
rescue-mission-ai-thesis-master@a8e3a878820_2/scripts/support_scripts/darp/CoveragePathPlanning/test_notebooks/: BoustrophedonTests.ipynb  CPPTests.ipynb  DARPTests.ipynb
rescue-mission-ai-thesis-master@a8e3a878820_2/srv/: AddMultipleTasks.srv  AddSingleTask.srv  RemoveSingleTask.srv  SetBatteryCharge.srv
